--- a/src/main/resources/templates/create-auction.html
+++ b/src/main/resources/templates/create-auction.html
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label for="startingPrice">Starting Bid</label>
-                <input type="number" step="0.01" id="startingPrice" name="startingPrice" th:field="*{startingPrice}" class="form-control" required />
+                <input type="number" id="startingPrice" name="startingPrice" th:field="*{startingPrice}" class="form-control" required min="0.01" step="0.01" />
             </div>
             <div class="form-group">
                 <label for="endTime">End Time</label>
