--- a/src/main/resources/templates/delete-auction.html
+++ b/src/main/resources/templates/delete-auction.html
@@ -19,6 +19,7 @@
             </ul>
         </div>
         <form th:action="@{/api/v2/auctions/delete/{id}(id=${auction.id})}" method="post" class="mt-3">
+            <input type="hidden" name="_method" value="delete"/>
             <button type="submit" class="btn btn-danger">Delete Auction</button>
             <a th:href="@{/api/v2/auctions/category/{categoryId}(categoryId=${auction.categoryId})}" class="btn btn-secondary">Cancel</a>
         </form>
