--- a/src/main/resources/templates/list-auctions.html
+++ b/src/main/resources/templates/list-auctions.html
@@ -32,7 +32,10 @@
                     <td>
                         <a th:href="@{/api/v2/auctions/{id}(id=${auction.id})}" class="btn btn-info btn-sm">View</a>
                         <a th:href="@{/api/v2/auctions/update/{id}(id=${auction.id})}" class="btn btn-warning btn-sm">Update</a>
-                        <a th:href="@{/api/v2/auctions/delete/{id}(id=${auction.id})}" class="btn btn-danger btn-sm">Delete</a>
+                        <form th:action="@{/api/v2/auctions/delete/{id}(id=${auction.id})}" method="post" style="display:inline;">
+                            <input type="hidden" name="_method" value="delete"/>
+                            <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                        </form>
                     </td>
                 </tr>
                 <tr th:if="${#lists.isEmpty(auctions)}">
