--- a/src/main/resources/templates/update-auction.html
+++ b/src/main/resources/templates/update-auction.html
@@ -8,6 +8,7 @@
     <div class="container">
         <h1 class="mt-5">Update Auction</h1>
         <form th:action="@{/api/v2/auctions/update/{id}(id=${auction.id})}" method="post" th:object="${auction}" class="mt-3">
+            <input type="hidden" th:field="*{categoryId}" /> <!-- Ensure the categoryId is included in the form -->
             <div class="form-group">
                 <label for="itemName">Item Name</label>
                 <input type="text" id="itemName" name="itemName" th:field="*{itemName}" class="form-control" required />
