create category function complete

--- a/src/main/resources/templates/list-auctions.html
+++ b/src/main/resources/templates/list-auctions.html
@@ -43,7 +43,7 @@
                 </tr>
             </tbody>
         </table>
-        <a th:href="@{/api/v2/users/home}" class="btn btn-secondary">Back to Categories</a>
+        <a th:href="@{/api/v2/home}" class="btn btn-secondary">Back to Categories</a>
     </div>
 </body>
 </html>
