--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,8 +5,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 <body>
+	<div style="position: absolute; top: 10px; right: 10px;">
+         <!-- Logout button -->
+         <form th:action="@{/api/v2/logout}" method="get" style="margin: 0;">
+             <button type="submit" class="btn btn-danger" style="padding: 5px 10px; border-radius: 5px;">Logout</button>
+         </form>
+     </div>
     <div class="container">
-        <h1 class="mt-5">Auction Categories</h1>
+        <h1 class="mt-5">Auction Categories</h1>    
         <div class="list-group mt-3">
             <!-- Iterate over the categories -->
             <a th:each="category : ${categories}"
