--- a/src/main/resources/templates/update-auction.html
+++ b/src/main/resources/templates/update-auction.html
@@ -34,6 +34,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Update Auction</button>
             <a th:href="@{/api/v2/auctions/category/{categoryId}(categoryId=${auction.categoryId})}" class="btn btn-secondary">Cancel</a>
+            <div th:if="${errorMessage}" class="alert alert-danger mt-4" th:text="${errorMessage}"></div>
         </form>
     </div>
 </body>
